[tool.poetry]
name = "linked-data-repository"
version = "0.1.0"
description = ""
authors = ["mikeAdamss <mikelovesbooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^21.12.1"
requests = "^2.27.1"
ldrshared = { git = "https://github.com/GSS-Cogs/linked-data-repository-shared.git", rev = "3f88d838d6d56fbcb20035738e9e8ff6538334ae" }

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
